# libxmldiff

./: .gitignore  .travis.yml  .vscode  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  _config.yml  aclocal.m4  bootstrap  configure  configure.ac  libxmldiff.pc.in  sonar-project.properties
doc/: dox_main_page.md  libxmldiff.dox  libxmldiff.dox.in  travis_dox.sh
html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00011_source.html  a00012.html  a00012_source.html  a00013.html  a00013_source.html  a00014.html  a00014_source.html  a00015.html  a00015_source.html  a00016.html  a00016_source.html  a00017.html  a00017_source.html  a00018.html  a00018_source.html  a00019.html  a00019_source.html  a00020.html  a00020_source.html  a00021.html  a00021_source.html  a00022.html  a00022_source.html  a00023.html  a00023_source.html  a00024.html  a00024_source.html  a00025.html  a00025_source.html  (+21 more)
libxmldiff/: libxmldiff.h  lx2_parse.h
src/: Makefile.am  Makefile.in  errors.cpp  errors.h  libxmldiff.h  libxmldiff.pc  libxmldiff.pc.in  lx2_diff.cpp  lx2_diff.h  lx2_ops.cpp  lx2_ops.h  lx2_parse.cpp  lx2_parse.h  lx2_str.h  lx2_util.cpp  lx2_util.h  xmldiff.cpp  xmldiff.h
tests/: tests.sh
tests/basics/: badencoding.xml  before.xml  command.lst  exp-diff-output.xml  exp-ignore-output.xml  exp-merge-bv-merge.xml  exp-merge-merge.xml  exp-merge-no-merge.xml  exp-nons-output.xml  exp-ns-output.xml  exp-std-output.xml
tests/bug-emptyprefix/: before.xml  command.lst
tests/bug-nullnsprefix/: command.lst  output.xml  sendBuffer.xml  sendBuffer2.xml
tests/bugs/: cdata1.xml  cdata2.xml  command.lst  exp-cdata-before-cdata.xml  exp-cdata-before-ids-cdata.xml  exp-cdata-cdata.xml  exp-cdata-ids-cdata.xml  exp-cdata-ids-noblanks-cdata.xml  exp-memleak2-memleak2.xml  product2.xml
tests/coverage/: after.xml  command.lst  exp-coverage-output.xml  script.xds
tests/scripts/: command.lst  exp-warning-toto.xml  message.xds  message.xsl  script.xds
tests/similar/: command.lst  exp-std-output.xml
tests/xslt/: command.lst  file.xml  omit-declaration.xsl
